--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   adaptive_theme: ^3.6.0
   google_fonts: ^6.2.1
   cloud_firestore: ^5.0.2
+  firebase_messaging: ^15.0.2
+  provider: ^6.1.2
+  flutter_local_notifications: ^17.2.1
 
 dev_dependencies:
   flutter_test:
